--- a/playbooks/docker.yml
+++ b/playbooks/docker.yml
@@ -18,7 +18,7 @@
 - name: DOCKER - Add official repository
   become: true
   ansible.builtin.apt_repository:
-    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ansible_lsb.codename}} stable
+    repo: deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu {{ansible_lsb.codename}} stable
     state: present
 
 - name : DOCKER - Install Docker
