--- a/playbooks/docker.yml
+++ b/playbooks/docker.yml
@@ -30,6 +30,7 @@
     - docker-ce
     - docker-ce-cli
     - containerd.io
+    - docker-compose
 
 - name: DOCKER - Add user to Docker Group
   become: yes
