feat: Support for WSL Ubuntu 22.04.1

--- a/local.yml
+++ b/local.yml
@@ -7,7 +7,7 @@
     - include_tasks: playbooks/oh-my-zsh.yml
     - include_tasks: playbooks/git-flow.yml
     - include_tasks: playbooks/docker.yml
-    - include_tasks: playbooks/php-8.1.yml
-    - include_tasks: playbooks/nodejs-14.yml
+    - include_tasks: playbooks/php.yml
+    - include_tasks: playbooks/nodejs.yml
     - include_tasks: playbooks/laravel-aliases.yml
     - include_tasks: playbooks/p4merge.yml
