--- a/playbooks/nodejs.yml
+++ b/playbooks/nodejs.yml
@@ -13,7 +13,7 @@
   become_user: "{{ansible_env.SUDO_USER}}"
   lineinfile:
     dest: "/home/{{ansible_env.SUDO_USER}}/.zshrc"
-    line: [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # This loads nvm"
+    line: [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
     owner: "{{ansible_env.SUDO_USER}}"
 
 - name: NODEJS - Install NVM
