--- a/playbooks/nodejs.yml
+++ b/playbooks/nodejs.yml
@@ -18,7 +18,7 @@
 
 - name: NODEJS - Install NVM
   become_user: "{{ansible_env.SUDO_USER}}"
-  shell: source /home/{{ansible_env.SUDO_USER}}/.zshrc && nvm install v18
+  shell: nvm install v18
 
 - name: NPM - Check if local global path installed
   become_user: "{{ansible_env.SUDO_USER}}"
