--- a/playbooks/old_nodejs.yml
+++ b/playbooks/old_nodejs.yml
@@ -61,4 +61,4 @@
 
 - name: NODEJS - Install Node 18 using NVM
   become_user: "{{ansible_env.SUDO_USER}}"
-  shell: . /home/username/.zshrc && && nvm install v18
+  shell: /bin/bash -c "source /home/{{ansible_env.SUDO_USER}}/.zshrc && nvm install --lts --no-progress --latest-npm"
