--- a/playbooks/old_nodejs.yml
+++ b/playbooks/old_nodejs.yml
@@ -34,6 +34,14 @@
   when: not npm_local_packages.stat.exists
   shell: mkdir "/home/{{ansible_env.SUDO_USER}}/.npm-packages"
 
+- name: NVM - Define BASH COMPLETION in .zshrc
+  become_user: "{{ansible_env.SUDO_USER}}"
+  when: not npm_local_packages.stat.exists
+  lineinfile:
+    dest: "/home/{{ansible_env.SUDO_USER}}/.npmrc"
+    line: 'prefix=~/.npm-packages'
+    owner: "{{ansible_env.SUDO_USER}}"
+
 - name: NPM - Set global packages directory
   become_user: "{{ansible_env.SUDO_USER}}"
   shell: npm config set prefix "/home/{{ansible_env.SUDO_USER}}/.npm-packages"
