--- a/playbooks/nvm.yml
+++ b/playbooks/nvm.yml
@@ -1,5 +1,7 @@
 - name: Install nvm
+  become: yes
+  become_user: "{{ansible_env.SUDO_USER}}"
   ansible.builtin.shell: >
-    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
+    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash
   args:
-    creates: "{{ ansible_env.HOME }}/.nvm/nvm.sh"
+    creates: "/home/{{ansible_env.SUDO_USER}}/.nvm/nvm.sh"
